--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,4 @@ jobs:
       - name: Notify to Slack if fails through a webhook
         if: failure()
         run: |
-          curl -X POST -H 'Content-Type: application/json' \
-          --data "{\"text\": \"El pipeline falló en el repo ${{ github.repository }}.\nCommit: ${{ github.sha }}\nAutor: ${{ github.actor }}\"}" \
-          https://hooks.slack.com/services/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
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Hello, World!"}' https://hooks.slack.com/services/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
