Exercise 6: Stress test for many cukes and many hours, implementation in belly.py for simulate that the method takes a long time, and show this time in pipeline.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,6 +21,8 @@ jobs:
         run: behave -t spanish -skip
       - name: Test with behave in english
         run: behave -t english -skip
+      - name: Stress test with behave 
+        run: behave -t stress -skip --no-capture
       - name: Notify to Slack if fails through a webhook
         if: failure()
         run: |
