--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,6 +21,8 @@ jobs:
         run: behave -t spanish -skip --no-capture
       - name: Test with behave in english
         run: behave -t english -skip --no-capture
+      - name: Test "criterio_nuevo" scenarios
+        run: behave -t criterio_nuevo -skip --no-capture
       - name: Stress test with behave 
         run: behave -t stress -skip --no-capture
       - name: Notify to Slack if fails through a webhook
