--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Check code quality with flake8
+        run: flake src tests --max-line-length
       - name: Test with pytest
         run: pytest
       - name: Test with behave in spanish
@@ -31,4 +33,9 @@ jobs:
           curl -X POST -H 'Content-type: application/json' --data '{"text": "El pipeline falló en el repo ${{ github.repository }}.\nCommit: ${{ github.sha }}\nAutor: ${{ github.actor }}"}' \
           "${{ secrets.SLACK_WEBHOOK_URL }}"
       - name: Get coverage
-        run: pytest --cov=src --cov-branch --cov-report=term
+        run: pytest --cov=src --cov-branch --cov-report=html
+      - name: Upload HTML coverage report as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: htmlcov
