--- a/Actividad-10/setup.cfg
+++ b/Actividad-10/setup.cfg
@@ -1,8 +1,8 @@
-#[tool:pytest]
-#addopts = -v --tb=short --cov=. --cov-report=term-missing
+[tool:pytest]
+addopts = -v --tb=short --cov=. --cov-report=term-missing --cov-report=html
 
-#[coverage:run]
-#branch = True
+[coverage:run]
+branch = True
 
-#[coverage:report]
-#show_missing = True
+[coverage:report]
+show_missing = True
