Resolví el Ejercicio 1

--- a/Proyecto_iac_local/.gitignore
+++ b/Proyecto_iac_local/.gitignore
@@ -101,9 +101,10 @@ terraform.tfstate.backup
 *.json
 *.txt
 *.pid
+.terraform*
 
 ### Terraform Patch ###
 # End of https://www.gitignore.io/api/terraform
 
 
-generated_environment
+generated_environment/
